# StudyNdk

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jelly/thor/studyndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jelly/thor/studyndk/: MainActivity.kt
app/src/main/java/com/jelly/thor/studyndk/test1/: SignatureUtils.java  SignatureUtils.kt
app/src/test/java/com/jelly/thor/studyndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
